Bugs in Safari and Firefox squashed

--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
     flex-wrap: wrap;
 }
 
+.optBlock > div
+{
+    margin-right: 10px;
+}
+
 .optBlock
 {
     justify-content: space-between;
@@ -25,7 +30,6 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    margin: 0 0 0 10px;
 }
 
 #rainbow
@@ -47,6 +51,8 @@ input[type=number]
 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 10pt;
+    width: 30px;
+    -moz-appearance:textfield;
 }
 
 input[name=mode]
